# RAG-app

./: README.md  pyproject.toml
local-model/: pyproject.toml
